--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,28 @@
 			<artifactId>lucene-queryparser</artifactId>
 			<version>${lucene-queryparser.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>31.0.1-jre</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>2.0.1-beta</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>2.0.1-beta</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
