--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
 		<lucene.version>8.9.0</lucene.version>
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<lucene-queryparser.version>8.9.0</lucene-queryparser.version>
+		<guava.version>31.0.1-jre</guava.version>
+		<junit.version>4.13.2</junit.version>
+		<mockito.version>2.0.1-beta</mockito.version>
 	</properties>
 
 	<dependencies>
@@ -30,24 +33,18 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>31.0.1-jre</version>
+			<version>${guava.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
+			<version>${junit.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
-			<version>2.0.1-beta</version>
+			<version>${mockito.version}</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>2.0.1-beta</version>
-			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
